--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,19 +1,19 @@
 ---
 
-- name: repository - add the GPG key
+- name: Debian | repository - add the GPG key
   apt_key:
     url: '{{ erlang_ppa_key }}'
     id: '{{ erlang_ppa_key_id }}'
     state: present
   when: erlang_ppa_key != None
 
-- name: add repository to install Erlang from
+- name: Debian | add repository to install Erlang from
   apt_repository:
     repo: '{{ erlang_ppa_repo }}'
     update_cache: yes
   when: erlang_ppa_repo != None
 
-- name: install packages
+- name: Debian | install packages
   apt:
     pkg: '{{ item }}'
     state: installed
