--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -1,20 +1,20 @@
 ---
 
-- name: repository - add the GPG key
+- name: RedHat | repository - add the GPG key
   rpm_key:
     state: present
     key: '{{ erlang_rpm_key }}'
   when: erlang_rpm_key != None
 
-- name: add Erlang repository
-  copy:
+- name: RedHat | add Erlang repository
+  template:
     src: erlang-solutions.j2
     dest: '{{ erlang_yum_repo_path }}/erlang-solutions.repo'
     owner: root
     group: root
     mode: 0644
 
-- name: install packages
+- name: RedHat | install packages
   yum:
     name: '{{ item }}'
     state: installed
